CSS fixes; edit shader_transparent_chicago rotation offset tip

--- a/src/data/structs/h1/tags/shader_transparent_chicago.yml
+++ b/src/data/structs/h1/tags/shader_transparent_chicago.yml
@@ -24,7 +24,11 @@ type_defs:
       - name: unfiltered
       - name: alpha_replicate
       - name: u_clamped
+        comments:
+          en: Texture coordinates outside the U 0-1 range will be clamped to the edges. See [_u animation function_](#tag-field-maps-u-animation-function) for caveats.
       - name: v_clamped
+        comments:
+          en: Texture coordinates outside the V 0-1 range will be clamped to the edges. See [_u animation function_](#tag-field-maps-u-animation-function) for caveats.
   ShaderTransparentChicagoMap:
     class: struct
     assert_size: 220
@@ -66,17 +70,18 @@ type_defs:
       - name: u_animation_source
         type: FunctionOut
       - name: u_animation_function
-          default: 1
-          comments:
+        type: WaveFunction
+        meta:
+          default: one
+        comments:
           en: >
-            The u and v animation functions default to 1, which results in
-            effectively an additional map_u_offset and map_v_offset of 1. 
-            This causes some counterintuitive side effects. The u_clamped and v_clamped
+            Horizontal animation function. The u and v animation functions default to 1, which results in
+            effectively an additional _map u offset_ and _map v offset_ of 1. 
+            This causes some counterintuitive side effects. The [_u clamped_](#tag-field-maps-flags-u-clamped) and _v clamped_
             flags will not work properly, stretching the corner pixel across the entire canvas
             The rotation animation functions will behave unexpectedly as well, with 1 added to
-            the rotation_animation_center coordinates. It is recommended to set the function to 0
-            if these features are being used.
-        type: WaveFunction
+            the [_rotation animation center_](#tag-field-maps-rotation-animation-center) coordinates.
+            It is recommended to set the function to 0 if these features are being used.
       - name: u_animation_period
         type: float
         meta:
@@ -93,6 +98,10 @@ type_defs:
         type: FunctionOut
       - name: v_animation_function
         type: WaveFunction
+        meta:
+          default: one
+        comments:
+          en: Vertical animation function. See [_u animation function_](#tag-field-maps-u-animation-function) for caveats.
       - name: v_animation_period
         type: float
         meta:
@@ -123,6 +132,10 @@ type_defs:
           default: 360
       - name: rotation_animation_center
         type: Point2D
+        comments:
+          en: >
+            Coordinates for the center of map rotation. Note that these coordinates may be offset unintuitively if
+            [_u animation function_](#tag-field-maps-u-animation-function) and _v animation function_ are not _zero_.
   ShaderTransparentChicagoExtraFlags:
     class: bitfield
     size: 4
