--- a/src/data/structs/h1/tags/scenario_structure_bsp.yml
+++ b/src/data/structs/h1/tags/scenario_structure_bsp.yml
@@ -936,26 +936,41 @@ type_defs:
         meta:
           unit: world units
         comments:
-          en: >
-            The lowest Z-axis height (absolute, not frame relative) that
-            [vehicles](~vehicle) can reach while occupied. Does not affect other
-            object types. An unoccupied vehicle will still drop below this soft
-            barrier, but when it becomes occupied again it will quickly shoot
-            back up into the play area. An example of a map using a vehicle
-            floor is Gephyrophobia to prevent players from flying too far below
-            the bridge.
+          en: |
+            If set to a non-zero value, adds a soft barrier at this world-space
+            Z-axis height that occupied flying [vehicles](~vehicle) cannot fly below.
+            For example, the map Gephyrophobia uses this to prevent players from
+            flying too far below the bridge.
+
+            This affects vehicles with the _human plane_ or _alien fighter_
+            [vehicle type](~vehicle#tag-field-vehicle-type). The vehicle must also
+            be occupied and physics-active (has not come to a rest) to be repelled.
+
+            Other vehicle types, or unoccupied flying vehicles, will fall below this
+            floor and rest upon a second hard-coded floor at -256 WU.
+            
+            It is possible to spawn or teleport vehicles below these floors, however
+            as soon as the vehicle becomes physics-active, e.g. by driving it or
+            disturbing it with a melee, the vehicle will experience a repulsive force
+            proportional to its distance below the floor. This can result
+            in the vehicle shooting into the sky at immense speeds.
       - name: vehicle_ceiling
         type: float
         meta:
           unit: world units
         comments:
-          en: >
-            The maximum Z-axis height (absolute, not frame relative) that
-            vehicles can reach while occupied. Does not affect other objects
-            types. Above this point, occupied vehicles will elastically move
-            back below the ceiling. This can be used to limit the height that
-            players in flying vehicles like Banshees can reach for gameplay
-            reasons. An example of this can be seen in Blood Gulch.
+          en: |
+            If set to a non-zero value, adds a soft barrier at this world-space
+            Z-axis height that occupied flying [vehicles](~vehicle) cannot fly above.
+            For example, the map Blood Gulch uses this to prevent players from
+            flying too high. You may use this for gameplay reasons or to avoid
+            players seeing out of bounds.
+
+            The ceiling behaves essentially the same as the _vehicle floor_.
+            However, there is no second hard-coded ceiling. Other vehicle types,
+            and unoccupied flying vehicles, are free to move above the ceiling.
+            Once occupied, flying vehicles will be forced below the ceiling
+            proportionally to their height above it.
       - type: pad
         size: 20
       - name: default_ambient_color
