--- a/package.json
+++ b/package.json
@@ -24,27 +24,24 @@
   },
   "homepage": "https://c20.reclaimers.net",
   "devDependencies": {
-    "@markdoc/markdoc": "^0.1.10",
-    "@viz-js/viz": "^3.1.0",
-    "del": "^5.1.0",
-    "esbuild": "^0.15.12",
-    "express": "^4.17.1",
-    "feather-icons": "^4.28.0",
-    "glob": "^7.1.6",
-    "gulp": "^4.0.2",
-    "highlight.js": "^11.9.0",
-    "js-yaml": "^3.13.1",
-    "minisearch": "^2.3.1",
-    "preact": "^10.11.0",
-    "preact-render-to-string": "^5.2.4",
-    "ramda": "^0.27.1",
-    "sass": "^1.26.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4",
-    "viz.js": "^2.1.2"
-  },
-  "dependencies": {
+    "@markdoc/markdoc": "^0.5.3",
+    "@types/node": "^24.2.0",
+    "@viz-js/viz": "^3.16.0",
+    "del": "^8.0.0",
+    "esbuild": "^0.25.8",
+    "express": "^5.1.0",
+    "feather-icons": "^4.29.2",
     "front-matter": "^4.0.2",
+    "gulp": "^5.0.1",
+    "highlight.js": "^11.11.1",
+    "js-yaml": "^4.1.0",
+    "minisearch": "^7.1.2",
+    "preact": "^10.27.0",
+    "preact-render-to-string": "^6.5.13",
+    "ramda": "^0.31.3",
+    "sass": "^1.89.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2",
     "voll": "^1.2.6"
   }
 }
