--- a/src/data/hsc/h3/globals.yml
+++ b/src/data/hsc/h3/globals.yml
@@ -3699,6 +3699,8 @@ external_globals:
         ```hsc
         (ai_render_audibility [boolean])
         ```
+
+        When used with "ai_render_all_actors", displays unknown data about audio in reference to AI units
   - slug: ai_render_aiming_vectors
     info:
       en: |-
@@ -3741,6 +3743,8 @@ external_globals:
         ```hsc
         (ai_render_vitality [boolean])
         ```
+
+        When used with "ai_render_all_actors", displays shield and health of AI as a value from 0 to 1 
   - slug: ai_render_evaluations
     info:
       en: |-
@@ -3783,6 +3787,8 @@ external_globals:
         ```hsc
         (ai_render_shooting [boolean])
         ```
+
+        When used with 'ai_render_all_actors', displays AI weapon behavior such as current weapon status, accuracy percentage and burst and burst delay timers, as well as the current rate of fire the AI is imputting
   - slug: ai_render_trigger
     info:
       en: |-
@@ -4382,7 +4388,7 @@ external_globals:
         (ai_render_combat_status [boolean])
         ```
 
-        Displays the combat status value of AI units, needs "ai_render_all_actors" enabled
+        When used with "ai_render_all_actors", displays combat status value of AI units
   - slug: ai_render_decisions
     info:
       en: |-
